// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArraySchema denormalization Class denormalizes a single entity 1`] = `
[
  [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes a single entity 2`] = `
[
  [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes multiple entities 1`] = `
[
  [
    Cat {
      "id": "123",
      "type": "Cat",
    },
    Person {
      "id": "123",
      "type": "people",
    },
    {
      "id": "789",
    },
    Cat {
      "id": "456",
      "type": "Cat",
    },
  ],
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes multiple entities 2`] = `
[
  [
    Cat {
      "id": "123",
      "type": "Cat",
    },
    Person {
      "id": "123",
      "type": "people",
    },
    {
      "id": "789",
    },
    Cat {
      "id": "456",
      "type": "Cat",
    },
  ],
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes nested in object 1`] = `
[
  {
    "results": [
      Cat {
        "id": "1",
        "name": "Milo",
      },
      Cat {
        "id": "2",
        "name": "Jake",
      },
    ],
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes nested in object 2`] = `
[
  {
    "results": [
      Cat {
        "id": "1",
        "name": "Milo",
      },
      Cat {
        "id": "2",
        "name": "Jake",
      },
    ],
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes nested in object with primitive 1`] = `
{
  "results": [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Class denormalizes nested in object with primitive 2`] = `
{
  "results": [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 1`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 2`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 3`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 4`] = `
[
  {
    "tacos": [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 5`] = `
[
  {
    "tacos": [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 6`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.List [],
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 1`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 2`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 3`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 4`] = `
[
  {
    "tacos": [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 5`] = `
[
  {
    "tacos": [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 6`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.List [],
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes should not be found when result array is undefined 1`] = `
{
  "results": undefined,
}
`;

exports[`ArraySchema denormalization Class denormalizes should not be found when result array is undefined 2`] = `
{
  "results": undefined,
}
`;

exports[`ArraySchema denormalization Class denormalizes with missing entity should have true second value 1`] = `
[
  [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  false,
  false,
]
`;

exports[`ArraySchema denormalization Class denormalizes with missing entity should have true second value 2`] = `
[
  [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  false,
  false,
]
`;

exports[`ArraySchema denormalization Class does not assume mapping of schema to attribute values when schemaAttribute is not set 1`] = `
{
  "entities": {
    "Cat": {
      "1": {
        "id": "1",
      },
      "2": {
        "id": "2",
      },
    },
  },
  "entityMeta": {
    "Cat": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
      "2": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": [
    {
      "cat": "1",
      "id": "5",
    },
    {
      "cat": "2",
      "id": "6",
    },
  ],
}
`;

exports[`ArraySchema denormalization Class returns the input value if is not an array 1`] = `
[
  Taco {
    "fillings": {},
    "id": "123",
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Class returns the input value if is not an array 2`] = `
[
  Taco {
    "fillings": Immutable.Map {},
    "id": "123",
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes a single entity 1`] = `
[
  [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes a single entity 2`] = `
[
  [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes nested in object 1`] = `
[
  {
    "results": [
      Cat {
        "id": "1",
        "name": "Milo",
      },
      Cat {
        "id": "2",
        "name": "Jake",
      },
    ],
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes nested in object 2`] = `
[
  {
    "results": [
      Cat {
        "id": "1",
        "name": "Milo",
      },
      Cat {
        "id": "2",
        "name": "Jake",
      },
    ],
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes nested in object with primitive 1`] = `
{
  "results": [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Object denormalizes nested in object with primitive 2`] = `
{
  "results": [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 1`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 2`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 3`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 4`] = `
[
  {
    "tacos": [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 5`] = `
[
  {
    "tacos": [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 6`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.List [],
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 1`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 2`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 3`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 4`] = `
[
  {
    "tacos": [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 5`] = `
[
  {
    "tacos": [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 6`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.List [],
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object denormalizes removes undefined 1`] = `
{
  "results": [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Object denormalizes removes undefined 2`] = `
{
  "results": [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Object denormalizes should not be found when result array is undefined 1`] = `
{
  "results": undefined,
}
`;

exports[`ArraySchema denormalization Object denormalizes should not be found when result array is undefined 2`] = `
{
  "results": undefined,
}
`;

exports[`ArraySchema denormalization Object denormalizes with missing entity should have true second value 1`] = `
[
  {
    "data": Cat {
      "id": "1",
      "name": "Milo",
    },
  },
  {
    "data": Cat {
      "id": "2",
      "name": "Jake",
    },
  },
  {
    "data": undefined,
  },
]
`;

exports[`ArraySchema denormalization Object denormalizes with missing entity should have true second value 2`] = `
[
  {
    "data": Cat {
      "id": "1",
      "name": "Milo",
    },
  },
  {
    "data": Cat {
      "id": "2",
      "name": "Jake",
    },
  },
  {
    "data": undefined,
  },
]
`;

exports[`ArraySchema denormalization Object returns the input value if is not an array 1`] = `
[
  Taco {
    "fillings": null,
    "id": "123",
  },
  true,
  false,
]
`;

exports[`ArraySchema denormalization Object returns the input value if is not an array 2`] = `
[
  Taco {
    "fillings": null,
    "id": "123",
  },
  true,
  false,
]
`;

exports[`ArraySchema normalization Class filters out undefined and null normalized values 1`] = `
{
  "entities": {
    "User": {
      "123": {
        "id": "123",
      },
    },
  },
  "entityMeta": {
    "User": {
      "123": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": [
    "123",
  ],
}
`;

exports[`ArraySchema normalization Class normalizes Objects using their values 1`] = `
{
  "entities": {
    "User": {
      "1": {
        "id": "1",
      },
      "2": {
        "id": "2",
      },
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
      "2": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": [
    "1",
    "2",
  ],
}
`;

exports[`ArraySchema normalization Class normalizes a single entity 1`] = `
{
  "entities": {
    "Cats": {
      "1": {
        "id": "1",
      },
      "2": {
        "id": "2",
      },
    },
  },
  "entityMeta": {
    "Cats": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
      "2": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": [
    "1",
    "2",
  ],
}
`;

exports[`ArraySchema normalization Class normalizes multiple entities 1`] = `
{
  "entities": {
    "Cats": {
      "123": {
        "id": "123",
        "type": "Cat",
      },
      "456": {
        "id": "456",
        "type": "Cat",
      },
    },
    "Person": {
      "123": {
        "id": "123",
        "type": "people",
      },
    },
  },
  "entityMeta": {
    "Cats": {
      "123": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
      "456": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
    "Person": {
      "123": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": [
    {
      "id": "123",
      "schema": "Cat",
    },
    {
      "id": "123",
      "schema": "people",
    },
    {
      "id": "789",
      "name": "fido",
    },
    {
      "id": "456",
      "schema": "Cat",
    },
  ],
}
`;

exports[`ArraySchema normalization Class normalizes multiple entities 2`] = `
[
  [
    {
      "id": "123",
      "type": "Cat",
    },
    [
      {
        "id": "123",
        "type": "Cat",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  [
    {
      "id": "123",
      "type": "Cat",
    },
    [
      {
        "id": "123",
        "type": "Cat",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  [
    {
      "id": "123",
      "type": "people",
    },
    [
      {
        "id": "123",
        "type": "Cat",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  [
    {
      "id": "123",
      "type": "people",
    },
    [
      {
        "id": "123",
        "type": "Cat",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  [
    {
      "id": "789",
      "name": "fido",
    },
    [
      {
        "id": "123",
        "type": "Cat",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  [
    {
      "id": "789",
      "name": "fido",
    },
    [
      {
        "id": "123",
        "type": "Cat",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  [
    {
      "id": "456",
      "type": "Cat",
    },
    [
      {
        "id": "123",
        "type": "Cat",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  [
    {
      "id": "456",
      "type": "Cat",
    },
    [
      {
        "id": "123",
        "type": "Cat",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
]
`;

exports[`ArraySchema normalization Object normalizes Objects using their values 1`] = `
{
  "entities": {
    "User": {
      "1": {
        "id": "1",
      },
      "2": {
        "id": "2",
      },
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
      "2": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": [
    "1",
    "2",
  ],
}
`;

exports[`ArraySchema normalization Object normalizes plain arrays as shorthand for ArraySchema 1`] = `
{
  "entities": {
    "User": {
      "1": {
        "id": "1",
      },
      "2": {
        "id": "2",
      },
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
      "2": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": [
    "1",
    "2",
  ],
}
`;

exports[`ArraySchema normalization Object passes its parent to its children when normalizing 1`] = `
{
  "entities": {
    "Child": {
      "4": {
        "content": "child",
        "id": 4,
      },
    },
    "Parent": {
      "1": {
        "children": [
          "4",
        ],
        "content": "parent",
        "id": "1",
      },
    },
  },
  "entityMeta": {
    "Child": {
      "4": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
    "Parent": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": "1",
}
`;

exports[`ArraySchema normalization Object should throw a custom error if data loads with json string unexpected value 1`] = `
"Normalizing a string, but this does match schema.

Parsing this input string as JSON worked. This likely indicates fetch function did not parse
the JSON. By default, this only happens if "content-type" header includes "json".
See https://resthooks.io/docs/guides/custom-networking for more information

  Schema: [
  {
    "name": "User",
    "schema": {},
    "key": "User"
  }
]
  Input: "[{"id":5}]""
`;

exports[`ArraySchema normalization Object should throw a custom error if data loads with string unexpected value 1`] = `
"Unexpected input given to normalize. Expected type to be "object", found "string".

          Schema: [
  {
    "name": "User",
    "schema": {},
    "key": "User"
  }
]
          Input: "abc""
`;
